_sass/_base.scss
/** ALL element base styles **/
*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/** Body base styles **/
body,
html {
  width: 100%;
  height: 100%;
  background: #f1f3f4;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.1em;
  -webkit-font-smoothing: antialiased;
  margin: 0;
}


/** Links **/
a {
  color: #1D809F;
}
a:hover, a:focus, a:active {
  color: #155d74;
}


/** Headers **/
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  margin: 0;
  line-height: inherit;
}


/** Brand color classes **/
.color-red {
  color: #e24e42
}
.color-blue {
  /*color: #0089cc*/
  color: #1D809F
}


/** Text style classes **/
.text-primary {
  color: #1D809F !important;
}
.text-secondary {
  color: #ecb807 !important;
}
.text-faded {
  color: rgba(255, 255, 255, 0.7);
}


/** Default <section> styles **/
.content-section {
  padding-top: 3rem;
  padding-bottom: 3rem;
  h2 {
    font-size: 3rem;
    //text-align: left;
  }
  h2:first-child + * {
    margin-top: 2rem;
  }
  h3 {
    font-size: 1.9rem;
    text-align: left;
  }
  h4 {
    font-size: 1.3rem;
  }
}


/** Buttons **/
* + .btn-container {
  margin-top: 2rem;
}
.btn-primary {
  background-color: #e24e42;
  border-color: #e24e42;
  color: #fff;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  background-color: #155d74 !important;
  border-color: #155d74 !important;
}
.btn-secondary {
  background-color: #ecb807 !important;
  border-color: #ecb807 !important;
  color: #fff !important;
}
.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
  background-color: #ba9106 !important;
  border-color: #ba9106 !important;
}
.btn-dark {
  color: #fff !important;
}
.btn {
  -webkit-box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
  font-weight: 700;
}
.btn-xl {
  padding: 1.25rem 2.5rem;
}


/** Circle icons **/
.circle-icon-white {
  background-color: #fff;
  color: #1D809F;
  height: 7rem;
  width: 7rem;
  display: block;
  line-height: 7.5rem;
  font-size: 2.25rem;
  -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
}

